@@ -1,4 +1,5 @@
 2013-10-02 v0.3.1 
+  (add) keyboard layout variants
   (add) Bluetooth Standby Support
   
 2013-10-02 v0.3.0
